// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should have cached 1`] = `
<span>
  0.2.0
</span>
`;

exports[`createReactor should have refetch 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <button
    onClick={[Function]}
  >
    Reset
  </button>
  <span>
    0.2.0
  </span>
</div>
`;

exports[`createReactor should have refetch 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <button
    onClick={[Function]}
  >
    Reset
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`createReactor should have refetch 3`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <button
    onClick={[Function]}
  >
    Reset
  </button>
  <span>
    0.2.0
  </span>
</div>
`;

exports[`createReactor should query on mount 1`] = `
<div>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`createReactor should query on mount 2`] = `
<div>
  <span>
    0.2.0
  </span>
</div>
`;
